# MindSpark

./: .ENV  .gitignore  README.md
.github/workflows/: check.yml
fastapi-app/app/routers/: chat.py  health.py
fastapi-app/app/services/: neural_service.py
src/: .env  docker-compose.yml
src/database/: init.sql
src/django-app/: requirements.txt
src/django-app/app/coach_project/: manage.py
src/django-app/app/coach_project/coach_project/: .ENV  asgi.py  settings.py  urls.py  wsgi.py
src/fastapi-app/: .Dockerignore  Dockerfile  pyproject.toml  requirements.txt
src/fastapi-app/app/: .ENV  .env  config.py  database.py  main.py
src/fastapi-app/app/models/: users.py
src/fastapi-app/app/routers/: auth.py  chat.py  health.py
src/fastapi-app/app/schemas/: users.py
src/fastapi-app/app/services/: neural_service.py  outh_google.py
src/frontend/: .dockerignore  .env  Dockerfile  index.html  package-lock.json  vite.config.js
src/frontend/nginx/: nginx.conf
src/frontend/src/: App.jsx
src/frontend/src/components/Routers/: MainRouter.jsx
src/frontend/src/pages/Auth/: Auth.jsx
src/frontend/src/pages/Auth/Google/: AuthGoogleCallback.jsx
src/frontend/src/pages/Chat/: Chat.jsx
src/frontend/src/pages/Home/: Home.jsx
src/frontend/static/: auth.html  chat.html  index.html  login.html
src/frontend/static/css/: chat.css
src/frontend/static/js/: auth.js  chat.js
