[project]
name = "fastapi-app"
version = "0.1.0"
description = ""
authors = [
    {name = "tsyganovvv",email = "tsyganov.vv0228@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (==0.115.6)",
    "uvicorn[standard] (==0.34.0)",
    "sqlalchemy[asyncio] (==2.0.36)",
    "asyncpg (==0.30.0)",
    "aiohttp (==3.11.10)",
    "pyjwt (==2.10.0)",
    "pydantic (==2.10.3)",
    "pydantic-settings (==2.7.0)",
    "accelerate (==1.3.0)",
    "sentencepiece (==0.2.0)",
    "transformers (==4.46.3)",
    "torch (==2.5.1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
